--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
               </li>
               <li class="menu-item">
                 <a class="menu-link" href="#">
-                  <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                  <svg aria-hidden="true" class="heart" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
                     <path fill="currentColor"
                       d="M9.9 19a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 6.5 2C7.8 2 9 2.5 10 3.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" />
                   </svg>
@@ -62,7 +62,7 @@
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="index.html">
                   <svg class="breadcrumbs-link" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
-                    width="13" height="13">
+                    width="12" height="12">
                     <path fill="currentColor" d="m6.5.5-6 5.8v6.2h12V6.3L6.5.5Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z" />
                     <path fill="currentColor" d="M4.5 10.5h1V8h2v2.5h1V7h-4v3.5Z" />
                   </svg>
