--- a/catalog.html
+++ b/catalog.html
@@ -18,13 +18,13 @@
           <nav class="navigation">
             <ul class="site-navigation">
               <li class="site-navigation-item ">
-                <a class="navigation-link active-link" href="index.html">Главная</a>
+                <a class="navigation-link" href="index.html">Главная</a>
               </li>
               <li class="site-navigation-item">
                 <a class="navigation-link" href="about.html">О Седоне</a>
               </li>
               <li class="site-navigation-item ">
-                <a class="navigation-link " href="catalog.html">Гостиницы</a>
+                <a class="navigation-link active-link" href="catalog.html">Гостиницы</a>
               </li>
             </ul>
             <ul class="menu">
