--- a/catalog.html
+++ b/catalog.html
@@ -145,13 +145,13 @@
                 <div class="range">
                   <div class="range-wrapper-inputs">
                     <label class="range-form-field-text">
-                      <input class="range-input range-min" type="number" value="0" name="min-price"
-                        style=" width: 143px" placeholder="">
+                      <input class="range-input range-min" type="number" value="" name="min-price"
+                        style=" width: 143px" placeholder="0">
                       <span class="range-min-span">от</span>
                     </label>
                     <label class="range-form-field-text">
-                      <input class="range-input range-max" type="number" value="9000" name="max-price"
-                        style=" width: 143px" placeholder="">
+                      <input class="range-input range-max" type="number" value="" name="max-price"
+                        style=" width: 143px" placeholder="9000">
                       <span class="range-max-span">до</span>
                     </label>
                   </div>
