--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
               <div class="quantity-group">
                 <label class="modal-form-title" for="grown-ups">Взрослые:</label>
                 <div class="modal-input-container">
-                  <button class="modal-button" type="button"><svg xmlns="http://www.w3.org/2000/svg" class="minus"
+                  <button class="modal-button" type="button"><svg class="minus" xmlns="http://www.w3.org/2000/svg" class="minus"
                       width="14" height="2" fill="currentColor" viewBox="0 0 14 2">
                       <path d="M0 0v2h14V0H0Z" />
                     </svg></button>
                   <input class="form-number" type="number" id="grown-ups" name="grown-ups" placeholder="">
-                  <button class="modal-button" type="button"><svg xmlns="http://www.w3.org/2000/svg" class="plus"
+                  <button class="modal-button" type="button"><svg class="plus" xmlns="http://www.w3.org/2000/svg" class="plus"
                       width="14" height="14" fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
@@ -244,7 +244,7 @@
                     </svg>
                   </button>
                   <input class="form-number" type="number" id="children" name="children" placeholder="">
-                  <button class="modal-button" type="button"><svg xmlns="http://www.w3.org/2000/svg" class="plus"
+                  <button class="modal-button" type="button"><svg class="plus" xmlns="http://www.w3.org/2000/svg" class="plus"
                       width="14" height="14" fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
