--- a/10/index.html
+++ b/10/index.html
@@ -62,7 +62,8 @@
           <img class="welcome" src="images/welcome-sedona.svg" width="458" height="352" alt="добро пожаловать в Седону">
         </section>
         <div class="hero-advantages">
-          <p class="lead">Седона&nbsp;—&nbsp;небольшой&nbsp;городок&nbsp;в&nbsp;Аризоне, заслуживающий&nbsp;большего!</p>
+          <p class="lead">Седона&nbsp;—&nbsp;небольшой&nbsp;городок&nbsp;в&nbsp;Аризоне, заслуживающий&nbsp;большего!
+          </p>
           <p>Рассмотрим причины, по которым Седона круче, чем&nbsp;Гранд-Каньон!</p>
         </div>
         <section class="advantages">
@@ -211,13 +212,13 @@
               <div class="quantity-group">
                 <label class="modal-form-title" for="grown-ups">Взрослые:</label>
                 <div class="modal-input-container">
-                  <button class="modal-button" type="button"><svg class="minus" xmlns="http://www.w3.org/2000/svg" class="minus"
-                      width="14" height="2" fill="currentColor" viewBox="0 0 14 2">
+                  <button class="modal-button" type="button"><svg class="minus" xmlns="http://www.w3.org/2000/svg"
+                      class="minus" width="14" height="2" fill="currentColor" viewBox="0 0 14 2">
                       <path d="M0 0v2h14V0H0Z" />
                     </svg></button>
                   <input class="form-number" type="number" id="grown-ups" name="grown-ups" placeholder="">
-                  <button class="modal-button" type="button"><svg class="plus" xmlns="http://www.w3.org/2000/svg" class="plus"
-                      width="14" height="14" fill="currentColor" viewBox="0 0 14 14">
+                  <button class="modal-button" type="button"><svg class="plus" xmlns="http://www.w3.org/2000/svg"
+                      class="plus" width="14" height="14" fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
                 </div>
@@ -245,8 +246,8 @@
                     </svg>
                   </button>
                   <input class="form-number" type="number" id="children" name="children" placeholder="">
-                  <button class="modal-button" type="button"><svg class="plus" xmlns="http://www.w3.org/2000/svg" class="plus"
-                      width="14" height="14" fill="currentColor" viewBox="0 0 14 14">
+                  <button class="modal-button" type="button"><svg class="plus" xmlns="http://www.w3.org/2000/svg"
+                      class="plus" width="14" height="14" fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
                 </div>
