--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Каталог</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="700af592b10efb59bc40bfadf0c8e61e.ico/favicon.ico" type="image/x-icon"> <!-- 32×32 -->
+    <link rel="icon" href="/images/favicon-32x32.png" type="image/x-icon"> <!-- 32×32 -->
   </head>
 
   <body>
