--- a/10/index.html
+++ b/10/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy:Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon"> <!-- 32×32 -->
+    <link rel="icon" href="/favicon-32x32.png" type="image/x-icon"> <!-- 32×32 -->
     <base href="https://htmlacademy-htmlcss.github.io/2518753-sedona-1/10/">
 </head>
 
@@ -215,13 +215,13 @@
                 <label class="modal-form-title" for="grown-ups">Взрослые:</label>
                 <div class="modal-input-container">
                   <button class="modal-button" type="button"><span class="visually-hidden">Убавить колличество
-                      посетителей</span><svg class="minus" xmlns="http://www.w3.org/2000/svg" width="14" height="2"
+                      посетителей</span><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
                       fill="currentColor" viewBox="0 0 14 2">
                       <path d="M0 0v2h14V0H0Z" />
                     </svg></button>
                   <input class="form-number" type="number" id="grown-ups" name="grown-ups" placeholder="" required>
                   <button class="modal-button" type="button"><span class="visually-hidden">Прибавить колличество
-                      посетителей</span> <svg class="plus" xmlns="http://www.w3.org/2000/svg" width="14" height="14"
+                      посетителей</span> <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
                       fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
@@ -245,14 +245,14 @@
                 <div class="modal-input-container">
                   <button class="modal-button" type="button"><span class="visually-hidden">Убавить колличество
                       посетителей</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="minus" width="14" height="2" fill="currentColor"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="2" fill="currentColor"
                       viewBox="0 0 14 2">
                       <path d="M0 0v2h14V0H0Z" />
                     </svg>
                   </button>
                   <input class="form-number" type="number" id="children" name="children" placeholder="">
                   <button class="modal-button" type="button"><span class="visually-hidden">Прибавить колличество
-                      посетителей</span><svg class="plus" xmlns="http://www.w3.org/2000/svg" width="14" height="14"
+                      посетителей</span><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
                       fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
