--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy:Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="/favicon-32x32.png" type="image/x-icon"> <!-- 32×32 -->
+    <link rel="icon" href="favicon-32x32.png" type="image/x-icon"> <!-- 32×32 -->
   </head>
 
   <body>
