--- a/10/catalog.html
+++ b/10/catalog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Каталог</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="/favicon-32x32.png" type="image/x-icon"> <!-- 32×32 -->
+    <link rel="icon" href="favicon-32x32.png" type="image/x-icon"> <!-- 32×32 -->
     <base href="https://htmlacademy-htmlcss.github.io/2518753-sedona-1/10/">
 </head>
 
